tests/rt/pos/ifc/lclear4.trp
(* positive test; nested raise/lowering *)
let val c1 = raisembox (`<alice;#root-integrity>`) 
    val c2 = raisembox (`<bob;#root-integrity>`)    
    val _ = lowermbox ( c2, attenuate (authority, `<bob;#root-integrity>` ))
    val _ = lowermbox ( c1, attenuate (authority, `<alice;#root-integrity>`))
in () 
end
