tests/rt/neg/ifc/lclear-wrongauth2.trp
(* negative test; insufficient authority  *)
let val c1 = raisembox (`<alice;#root-integrity>`) 
    val c2 = raisembox (`<bob;#root-integrity>`)    
    val _ = lowermbox ( c2, attenuate (authority, `<alice;#root-integrity>` ))
    val _ = lowermbox ( c1, attenuate (authority, `<bob;#root-integrity>`))
in () 
end
